--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
     <body>
 
+        <div id="header">
+            <button id="download">Télécharger</button>
+        </div>
         
-        <button id="dowload">Télécharger</button>
 
         <div id="main">
             
