--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
     <head>
+        <title>AutoDate</title>
+        <link rel="icon" href="" />
         <link rel="stylesheet" href="../AutoDate/css/index.css">
     </head>
 
