added css button plus ico

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 
     <head>
         <title>AutoDate</title>
-        <link rel="icon" href="" />
+        <link rel="icon" href="../AutoDate/img/logo_2.png" />
         <link rel="stylesheet" href="../AutoDate/css/index.css">
     </head>
 
     <body>
 
         <div id="header">
-            <button id="download">Télécharger</button>
+            <button class="download">Télécharger</button>
         </div>
         
 
