Add electron to project

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <link rel="stylesheet" href="../AutoDate/css/index.css">
+        <link rel="stylesheet" href="../AutoDate/css/style.css">
     </head>
 
     <body>
