--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="vertical-line"></div>
 
-            <div class="wizard"><img src="../AutoDate/img/Run StarUML Setup Wizard.png" alt=""> </div>
+            <div class="soft-picture"><img src="img/autodate.png" alt="software picture"> </div>
 
         </div>
         
