Add test script and delete electron app

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
 
         <div id="header">
-            <button class="download">Télécharger</button>
+            <a href="autodate.zip">
         </div>
         
 
