--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
 
         <div id="header">
-            <a href="autodate.zip">
+            <button class="download"><a href="autodate.zip">Télécharger</a></button>
         </div>
         
 
