Put download link into a button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
 
         <div id="header">
-            <button class="download"><a href="autodate.zip">Télécharger</a></button>
+            <button class="download"><a class="download-link" href="autodate.zip">Télécharger</a></button>
         </div>
         
 
